TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-09-25 MickeM
 * Initial version of CheckLogFile added (currentl no real-time support)

2012-09-23 MickeM
 * Fixed a centos (?) linkage issue with PythonScript module

2012-09-22 MickeM
 * Fixed performance data parsing for empty sections such as f=1;;;;1 will now work (and not become f=1;0;0;0;1)
 * Added unit test for perfoamnce data parsing
 * Added gtest unit test to ctest

2012-09-11 MickeM
 * Added NSCP uptime to check_nscp

2012-09-08 MickeM
 * Fixed log matching in CheckEventLog when no log was specified
 * Improved command line syntax for eventlog
 * Fixed return code issue in SimpleCache module

2012-09-08 MickeM
 * Improved command line help texts and added global --version option.
   Running nscp without options now lists all context and their use.
 * settings: bool options are now case insensetive so TrUe will now evaluate to true...
 * Improved clients command line interface adding support for default command
 * Improved command line syntax removing som extra printouts
 * Added support for lists (int and string) to wmi checks and commands.

2012-09-07 MickeM
 * Full SSL support for all server (NRPE, NSCA, check_mk, NSCP) by full I mean certificate based authentication

2012-09-06 MickeM
 * Full SSL support for all clients (NRPE, NSCA, check_mk, NSCP) by full I mean certificate based authentication

2012-09-05 MickeM
 * Full SSL support for NRPE (meaning certificate based authentication)

2012-09-04 MickeM
 * Fixed config parser issue for inheriated fields
 * Changed so ports in clients/servers are strings (so smtp and such should work)

2012-09-03 MickeM
 * New module SimpleCache which acts as a brdge between passive and active monitoring (and other use cases)
   Enables storing of results for later use
   Replaces check_eventlogcache (since it does the same)