@@ -13,16 +13,21 @@ namespace where_filter {
 		argument_type data;
 		parsers::where::parser ast_parser;
 		handler_instance_type object_handler;
+		std::wstring filter_string;
 
-		engine_impl(argument_type data) : data(data), object_handler(handler_instance_type(new handler_type())) {}
-		bool boot() {return true; }
+		engine_impl(argument_type data) : data(data), object_handler(handler_instance_type(new handler_type())) {
+			filter_string = data->filter;
+		}
+		engine_impl(argument_type data, std::wstring filter) : data(data), object_handler(handler_instance_type(new handler_type())), filter_string(filter) {}
+		bool boot() {return true; 
+		}
 
 		bool validate(std::wstring &message) {
 			if (data->debug)
-				data->error->report_debug(_T("Parsing: ") + data->filter);
+				data->error->report_debug(_T("Parsing: ") + filter_string);
 
-			if (!ast_parser.parse(data->filter)) {
-				data->error->report_error(_T("Parsing failed of '") + data->filter + _T("' at: ") + ast_parser.rest);
+			if (!ast_parser.parse(filter_string)) {
+				data->error->report_error(_T("Parsing failed of '") + filter_string + _T("' at: ") + ast_parser.rest);
 				message = _T("Parsing failed: ") + ast_parser.rest;
 				return false;
 			}
@@ -64,7 +69,7 @@ namespace where_filter {
 		std::wstring get_name() {
 			return _T("where");
 		}
-		std::wstring get_subject() { return data->filter; }
+		std::wstring get_subject() { return filter_string; }
 	};
 
 
